# CC5502_PROYECTO

./: CMakeLists.txt  README.md
data/san_miguel/: route.md  route.txt
data/san_miguel/geojson/: boundary.geojson  schools.geojson
data/san_miguel/query/: both.txt  san_miguel_boundary.txt  san_miguel_colegios.txt
data/san_ramon/: route.md  route.txt
data/san_ramon/geojson/: boundary.geojson  san_ramon_colegios.geojson
data/san_ramon/query/: both.txt  san_ramon_boundary.txt  san_ramon_colegios.txt
src/: glad.c  glad.h  largestEmptyCircleDemo.cpp  largestEmptyCircleReal.cpp  largestEmptyCircleVisual.cpp  main.cpp
